# nbody

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindGLM.cmake
include/: fb_t.hpp  nbody.h  objGL_t.hpp  octree.hpp  vao_t.hpp
src/: fb_t.cpp  nbody.cpp  nbody.cu  resources.inl  vao_t.cpp
